# docker-webhook-tekton-k8s-api

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
kubernetes/: 0_namespace.yaml  configmap.yaml  serviceaccount.yaml  webhook-ingress.yaml  webhookapi-deployment.yaml  webhookapi-service.yaml
src/: app.py  pipelinerun.yaml  repos.json
