[tool.poetry]
name = "docker-webhook-tekton-k8s-api"
version = "0.1.0"
description = ""
authors = ["Justin Guese <guese.justin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
